--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
-<1DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 	<title>Excursion</title>
-	<link href="./resources/css/style.css" rel="stylesheet">
+	<link href="resources/css/style.css" rel="stylesheet">
 </head>
 <body>
-	<h1>Discover hidden places in the world around you</h1>
-	<p><a>Download Excursion (Coming Soon!)</a></p>
+	<header>
+		<h1>Discover hidden places in the world around you</h1>
+		<p><a>Download Excursion (Coming Soon!)</a></p>
+	</header>
+	<p><video src="resources/css/videos/excursion.mp4" autoplay loop>Video Not Supported</video></p>
 </body>
 </html>
