Figure and figcaption add

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 		<h1>Discover hidden places in the world around you</h1>
 		<p><a>Download Excursion (Coming Soon!)</a></p>
 	</header>
-	<p><video src="resources/css/videos/excursion.mp4" autoplay loop>Video Not Supported</video></p>
+		<p><video src="resources/css/videos/excursion.mp4" autoplay loop>Video Not Supported</video></p>
+		<h2>Your personal travel guide</h2>
+			<figure>
+				<figcaption>Excursion remembers places you like and reccomends new points of interest around you.</figcaption>
+				<img src="resources/css/images/camp.jpeg">
+			</figure>
 </body>
 </html>
