main html complete

--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
 		<h2>Your personal travel guide</h2>
 			<figure>
 				<figcaption>Excursion remembers places you like and reccomends new points of interest around you.</figcaption>
-				<img src="resources/css/images/camp.jpeg">
+				<p><img src="resources/css/images/camp.jpeg"></p>
 			</figure>
+	<footer>
+		<p><img src="resources/css/images/phone.jpeg"></p>
+		<h2>Coming Soon for iPhone and Android</h2>
+		<p><a>Download Excursion (Coming Soon!)</a></p>
+	</footer>
 </body>
 </html>
