copyright add to footer

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 		<p><img src="resources/css/images/phone.jpeg"></p>
 		<h2>Coming Soon for iPhone and Android</h2>
 		<p><a>Download Excursion (Coming Soon!)</a></p>
+		<p id="copyright">&#169; Excursion</p>
 	</footer>
 </body>
 </html>
