final HTML commit

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 	<header>
 		<h1>Discover hidden places in the world around you</h1>
-		<p><a>Download Excursion (Coming Soon!)</a></p>
+		<p class="link"><a href="">Download Excursion (Coming Soon!)</a></p>
 	</header>
 		<p><video src="resources/css/videos/excursion.mp4" autoplay loop>Video Not Supported</video></p>
 		<h2>Your personal travel guide</h2>
@@ -18,7 +18,7 @@
 	<footer>
 		<p><img src="resources/css/images/phone.jpeg"></p>
 		<h2>Coming Soon for iPhone and Android</h2>
-		<p><a>Download Excursion (Coming Soon!)</a></p>
+		<p class="link"><a href="">Download Excursion (Coming Soon!)</a></p>
 		<p id="copyright">&#169; Excursion</p>
 	</footer>
 </body>
